# web_market_django

./: .gitignore  README.md  csv_to_json.py  manage.py  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/management/commands/: loadall.py
ads/migrations/: 0001_initial.py  0002_alter_ad_description_alter_ad_price.py  0002_alter_ad_is_published.py  0002_alter_ad_price.py  0002_initial.py  0003_alter_ad_author_alter_ad_description_and_more.py  0003_alter_ad_price.py  0004_alter_ad_id_alter_category_id.py  0005_alter_ad_id_alter_category_id.py
category/: admin.py  models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_category_slug.py
fixtures/: ad.json  ads.json  categories.json  category.json  location.json  user.json
homework_27/: asgi.py  settings.py  urls.py  wsgi.py
postgres_web_market/: docker-compose.yaml
selection/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
selection/migrations/: 0001_initial.py
tests/: ad_test.py  conftest.py  factories.py  fixtures.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_user_managers.py  0004_alter_user_managers_alter_user_location.py  0005_user_date_of_birth.py
